--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=6000
 MONGO_DB_URL=mongodb+srv://Zabi:23_MongoDb_23@productmanagmentsystem.nsyfr3v.mongodb.net/?retryWrites=true&w=majority
+TOKEN=FJDKFJDFJ
